--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 			<div id="header-div">
 				<nav id="header-links">
 					<ul>
-						<li><a href="http://www.google.com">Blog</a></li>
-						<li><a href="http://www.google.com">Contact Us</a></li>
-						<li><a href="http://www.google.com">Team</a></li>
-						<li><a href="http://www.google.com">FAQ</a></li>
-						<li><a href="http://www.google.com">About</a></li>
+						<li><a target="_blank" href="index.html">Blog</a></li>
+						<li><a target="_blank" href="http://www.google.com">Contact Us</a></li>
+						<li><a target="_blank" href="http://www.google.com">Team</a></li>
+						<li><a target="_blank" href="http://www.google.com">FAQ</a></li>
+						<li><a target="_blank" href="../relaxr/index.html">About</a></li>
 					</ul>
 				</nav>
 			</div>	
@@ -41,7 +41,7 @@
 					Lorem ipsum dolor sit amet, consectatur adipiscing elit. Fusce varius augue nex metus viverra interdum. Sed in gravida lectus. Pellentesque habitant morbi tristique senecturs et netu et malesuade fames ac turpis egestas. Mauris ut vulputate nisl. Maecenas quis auctor dui. Ut porta aliquam lorem, at volutpat orci commodo a. Suspendisse nunc orci, porttitor ac sapien a, rutrum porttitor odio. Phasellus faucibus tristique orci eget dictum. Proin tincidunt vehicula leo sed mattis. Nunc faucibus augue a pellentesque tristique. Proin suscipit in dui ut convallis.
 				</p>
 			</div>
-				<p class="read-more"><a href="http://www.google.com">Read More &gt;</a></p>
+				<p class="read-more"><a target="_blank" href="http://www.google.com">Read More &gt;</a></p>
 			<hr>
 			<div>
 				<h2 class="main-section-header">I traveled across the globe thanks to Relaxr's Excel automation</h2>
@@ -50,7 +50,7 @@
 					Lorem ipsum dolor sit amet, consectatur adipiscing elit. Fusce varius augue nex metus viverra interdum. Sed in gravida lectus. Pellentesque habitant morbi tristique senecturs et netu et malesuade fames ac turpis egestas. Mauris ut vulputate nisl. Maecenas quis auctor dui. Ut porta aliquam lorem, at volutpat orci commodo a. Suspendisse nunc orci, porttitor ac sapien a, rutrum porttitor odio. Phasellus faucibus tristique orci eget dictum. Proin tincidunt vehicula leo sed mattis. Nunc faucibus augue a pellentesque tristique. Proin suscipit in dui ut convallis.
 				</p>
 			</div>
-				<p class="read-more"><a href="http://www.google.com">Read More &gt;</a></p>
+				<p class="read-more"><a target="_blank" href="http://www.google.com">Read More &gt;</a></p>
 			<hr>
 		</section>
 
@@ -59,11 +59,11 @@
 				<h3>Categories</h3>
 				<nav id="category-list">
 					<ul >
-						<li><a href="http://www.google.com">Success stories</a></li>
-						<li><a href="http://www.google.com">Stats</a></li>
-						<li><a href="http://www.google.com">How tos</a></li>
-						<li><a href="http://www.google.com">Best of</a></li>
-						<li><a href="http://www.google.com">Business tips</a></li>
+						<li><a target="_blank" href="http://www.google.com">Success stories</a></li>
+						<li><a target="_blank" href="http://www.google.com">Stats</a></li>
+						<li><a target="_blank" href="http://www.google.com">How tos</a></li>
+						<li><a target="_blank" href="http://www.google.com">Best of</a></li>
+						<li><a target="_blank" href="http://www.google.com">Business tips</a></li>
 					</ul>
 				</nav>
 			
@@ -74,7 +74,7 @@
 				<p id="about-text">
 					Proin sed justo vel sapien varius auctor. Proin scelerisque massa at luctus tincidunt. Fusce porttitor, sapien sed tincidunt fringilla.
 					<p id="learn-more">
-						<a href="http://www.google.com">Learn More</a>
+						<a target="_blank" href="http://www.google.com">Learn More</a>
 					</p>
 				</p>
 
@@ -88,7 +88,7 @@
 
 		<div class="signup">
 			<div class="signup-link">
-				<a href="http://www.google.com">Sign Up Now!</a>
+				<a target="_blank" href="http://www.google.com">Sign Up Now!</a>
 			</div>
 		</div>
 
@@ -97,10 +97,10 @@
 		<footer>
 			<h3 id="footer-heading">Relaxr</h3>
 			<nav id="footer-links">
-				<a class="twitter" href="http://www.twitter.com">
+				<a class="twitter" target="_blank" href="http://www.twitter.com">
 					<img src="images/twitter.png" alt="twitterLink">
 				</a>
-				<a class="facebook" href="http://www.facebook.com">
+				<a class="facebook" target="_blank" href="http://www.facebook.com">
 					<img src="images/facebook.png" alt="facebookLink">
 				</a> 
 			</nav>
